# Douglas

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SANITIZATION_REPORT.md  SECURITY.md  THIRD_PARTY_NOTICES.md  cli.py  douglas.yaml  pyproject.toml  system_prompt.md
.douglas/demos/: example_demo.yaml
.github/workflows/: ci.yml
docs/: RECORDING.md
douglas/: __init__.py  cadence_manager.py  cli.py  core.py  logging_utils.py  orchestrator.py  sprint_manager.py
douglas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
douglas/agents/: __init__.py  executor.py  locks.py  merger.py  workspace.py
douglas/controls/: __init__.py  run_state.py
douglas/dashboard/: data.py  server.py
douglas/demo/: __init__.py  runner.py
douglas/domain/: __init__.py  backlog.py  metrics.py  (+2 more)
my-app/: .env.example  Makefile  README.md  douglas.yaml  pyproject.toml  system_prompt.md
my-app/.github/workflows/: ci.yml
my-app/src/app/: __init__.py
my-app/tests/: test_app.py
scripts/: ci_offline.sh  ci_replay.sh  record_replay_fixture.sh
templates/: .gitignore.tpl  README.md.tpl  douglas.yaml.tpl
tests/: conftest.py  test_agent_journals.py  test_agent_locking.py  test_app.py  test_cadence_and_push_integration.py  test_cadence_manager.py  test_ci_monitoring.py  test_cli_init.py  test_cli_version.py  test_codex_provider.py  test_commit_step.py  test_dashboard.py  test_demo_pack.py  test_demo_runner.py  test_exit_conditions.py  test_history_logging.py  test_init_command.py  test_init_project.py  test_lint_pipeline.py  test_llm_registry.py  test_local_checks.py  test_logging_module.py  test_openai_provider.py  test_plan_pipeline.py  test_planning_commitments.py  test_push_policy.py  test_questions_flow.py  test_retro.py  test_review_step.py  test_run_state.py  test_security_pipeline.py  test_sprint_manager.py  test_standup_pipeline.py  test_typecheck_pipeline.py
(+136 files in other folders)
