[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "douglas"
version = "0.1.0"
description = "Scaffolded with Douglas."
authors = [{ name = "Douglas" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
    "rich>=10.11",
    "fastapi>=0.110",
    "uvicorn>=0.22",
]

[project.scripts]
douglas = "douglas.cli:app"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["douglas*" ]
